[C] Fix range input overflow and QA review

--- a/src/assets/stylesheets/components/site/tables/_cell-inputs.scss
+++ b/src/assets/stylesheets/components/site/tables/_cell-inputs.scss
@@ -31,9 +31,11 @@
   > .table-cell-static-range {
     display: flex;
     flex-grow: 1;
+    align-items: flex-end;
     justify-content: space-evenly;
 
     > span {
+      max-width: 5ch;
       overflow: hidden;
       text-overflow: ellipsis;
     }
